--- a/mongo/mongo-master/mongo-pom/pom.xml
+++ b/mongo/mongo-master/mongo-pom/pom.xml
@@ -18,6 +18,7 @@
         <module>../mongo-comsumer</module>
         <module>../mongo-porducer</module>
         <module>../mongo-porducer2</module>
+        <module>../mongo-hystrix</module>
     </modules>
 
     <build>
