--- a/mongo/mongo-master/mongo-comsumer/src/main/resources/application.yml
+++ b/mongo/mongo-master/mongo-comsumer/src/main/resources/application.yml
@@ -23,12 +23,27 @@ spring:
             user.name: ${spring.security.user.name} #客户端元数据访问用户
             user.password: ${spring.boot.admin.client.password} #客户端元数据访问密码
   cloud:
-      #服务注册
-      consul:
-        host: localhost
-        port: 8500
-        discovery:
-          serviceName: ${spring.application.name}
+    #服务注册
+    consul:
+      host: localhost
+      port: 8500
+      discovery:
+        serviceName: ${spring.application.name}
+  # sleuth 配置
+  sleuth:
+    web:
+      client:
+        enabled: true
+    sampler:
+      probability: 1.0 # 采样比例为: 0.1(即10%),设置的值介于0.0到1.0之间，1.0则表示全部采集。
+  # zipkin 配置
+  zipkin:
+    base-url: http://localhost:9411//  # 指定了Zipkin服务器的地址
+    # 关闭服务发现，否则Spring Cloud会把zipkin的url当做服务名称
+    discoveryClientEnabled: false
+    sender:
+      type: web  # 设置使用http的方式传输数据
+
 # 开放健康检查接口
 management:
   endpoints:
