--- a/mongo/mongo-master/mongo-admin/src/main/resources/application.yml
+++ b/mongo/mongo-master/mongo-admin/src/main/resources/application.yml
@@ -30,7 +30,8 @@ spring:
   cloud:
       #服务注册
       consul:
-        host: 39.96.68.138
+        #host: 39.96.68.138
+        host: localhost
         port: 8500
         discovery:
           serviceName: ${spring.application.name}
@@ -38,6 +39,7 @@ spring:
     name: druidDataSource
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
+    #url: jdbc:mysql://39.96.68.138:3306/mongo?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
     url: jdbc:mysql://39.96.68.138:3306/mongo?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
     username: root
     password: root
