--- a/mongo/mongo-master/mongo-admin/src/main/resources/application-dev.yml
+++ b/mongo/mongo-master/mongo-admin/src/main/resources/application-dev.yml
@@ -30,8 +30,7 @@ spring:
   cloud:
       #服务注册
       consul:
-        host: 39.96.68.138
-        #host: localhost
+        host: localhost
         port: 8500
         discovery:
           serviceName: ${spring.application.name}
@@ -39,8 +38,7 @@ spring:
     name: druidDataSource
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
-    #url: jdbc:mysql://39.96.68.138:3306/mongo?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
-    url: jdbc:mysql://39.96.68.138:3306/mongo?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://localhost:3306/mongo?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
     username: root
     password: root
     druid:
